@@ -1,6 +1,10 @@
 Armitage Changelog
 ==================
 
+In Progress
+-----------
+- You may now drag and drop Armitage tabs to rearrange their order.
+
 09.08.11
 --------
 - Armitage now highlights the event log tab when something new is posted and the
